--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<h1>My Na Na Na...... You can't go beyond this for your own safety</h1>
 
-<p>My first paragraph.</p>
+<h2>My Contact Gouthamfor more information.</h2>
 
 </body>
 </html>
