--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>My Na Na Na...... You can't go beyond this for your own safety</h1>
+<h1>Na Na Na...... You can't go beyond this for your own safety</h1>
 <div class="tenor-gif-embed" data-postid="11873427" data-share-method="host" data-width="5%" data-aspect-ratio="1.0"><a href="https://tenor.com/view/hulk-roar-avengers-infinity-war-angry-gif-11873427">Hulk Roar GIF</a> from <a href="https://tenor.com/search/hulk-gifs">Hulk GIFs</a></div><script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 <h2>My Contact Goutham for more information.</h2>
 
